Made the plugin async, doesn't work with the shim yet somehow, because it tries to create tables multiple times. It won't do the same for inserts though so it seems something special is happening in the shim. Lots of error handling missing!

--- a/src/windows/SQLitePluginNative-arm.csproj
+++ b/src/windows/SQLitePluginNative-arm.csproj
@@ -48,6 +48,7 @@
     </SDKReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SQLiteConnectionManager.cs" />
     <Compile Include="SQLiteProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLite\SQLiteException.cs" />
