--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,11 @@
 .idea
 npm-debug.log
 node_modules
+.vs
 
 src/windows/obj
-dist/ARM/*.pdb
-dist/ARM/*.pri
-dist/x86/*.pdb
-dist/x86/*.pri
+src/windows/bin
+src/windows/*.user
+
+dist/*/*.pdb
+dist/*/*.pri
